--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Poomsae Test</title>
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/9/99/Gundam.jpg" type="image/gif" sizes="16x16">
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <style>
